MDEV-25143 JSON_TABLE: Server crashes in handler::print_error / hton_name upon ERROR ON EMPTY.

should return some error code from ha_json_table::rnd_pos() not just 1.